fix: organize code and fix cursor dragging on ui elements

--- a/resources/style.css
+++ b/resources/style.css
@@ -6,6 +6,10 @@ body, html {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    /* Prevent text selection */
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 /* From Uiverse.io by kennyotsu */ 
