--- a/resources/style.css
+++ b/resources/style.css
@@ -16,8 +16,8 @@ body, html {
 
 /* From Uiverse.io by kennyotsu */ 
 #canvas {
-    width: 4096px;
-    height: 4096px;
+    width: 100%;
+    height: 100%;
     /* Add your background pattern here */
     background-color: #09090b;
     background-image: radial-gradient(rgba(255, 255, 255, 0.25) 2px, transparent 0);
