refactor: add file descriptions and authors to all main files

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,10 @@
+/*
+    * File: style.css
+    * Description: This file contains the CSS styles for the web application.
+    * Last edited: 1446/12/26
+    * Author: Yasir Al Amriki
+*/
+
 /* Style to cover full screen and apply the pattern */
 body, html {
     margin: 0;
